feat(front): update legal mentions de

--- a/apps/front/i18n/de.json
+++ b/apps/front/i18n/de.json
@@ -1171,11 +1171,11 @@
   },
   "legal": {
     "title": "Impressum",
-    "make_infos": "Herausgeber der Website: MAKE.ORG, Rechtsform: Société par Actions Simplifiées (vereinfachte Aktiengesellschaft französischen Rechts) mit einem Grundkapital von {{make_capital}}, mit Hauptsitz in der {{make_address}}, Frankreich. Eingetragen im Handels- und Gesellschaftsregister von PARIS unter der Nummer {{make_rcs}} (nachfolgend „MAKE.ORG“ genannt).",
+    "make_infos": "Herausgeber der Website: MAKE.ORG GmbH mit Sitz Karl-Marx-Str. 12, 12043 Berlin, Deutschland, eingetragen beim Amtsgericht Berlin (Charlottenburg) unter der Registernummer HRB 242008 B (im Folgenden „Make.org“)\nUmsatzsteueridentifikationsnummer: DE353962906\nVerantwortlich für den Inhalt: Sarah Delahaye, Karl-Marx-Str. 12, 12043 Berlin\nDie EU Kommission hält unter der URL https://ec.europa.eu/consumers/odr eine Plattform zur Online-Streitschlichtung bereit. Wir sind zu einer Teilnahme an einem Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle weder bereit noch verpflichtet.",
     "mail": "E-Mail-Adresse: ",
     "make_phone": "Telefonnummer: ",
-    "make_phone_number": "{{make_phone_number}}",
-    "director": "Verantwortlich für den Inhalt: ",
+    "make_phone_number": "+49 163 145 80 95",
+    "director": "Vertretungsberechtigte Geschäftsführer: Sarah Delahaye, Axel Dauchez",
     "host": "Webhost: ",
     "host_address": "{{make_host_address}}, Frankreich",
     "host_phone": "Telefonnummer: ",
