--- a/apps/front/i18n/uk.json
+++ b/apps/front/i18n/uk.json
@@ -1202,7 +1202,7 @@
     "mail": "Адреса ел. пошти: ",
     "make_phone": "Номер телефону: ",
     "make_phone_number": "{{make_phone_number}}",
-    "director": "Директор публікації: ",
+    "director": "Директор публікації: Аксель Дошез (Axel Dauchez)",
     "host": "Хостинг сайту: ",
     "host_address": "{{make_host_address}} ФРАНЦІЯ",
     "host_phone": "Номер телефону: ",
