--- a/apps/front/i18n/fr.json
+++ b/apps/front/i18n/fr.json
@@ -778,8 +778,9 @@
       "start_date": "Date de lancement",
       "end_date": "Date de fin de la consultation",
       "remaining_one": "Jour restant",
-      "proposals_one": "Propositions",
       "remaining_other": "Jours restants",
+      "proposals_one": "Proposition",
+      "proposals_other": "Propositions",
       "participant_one": "Participant",
       "participant_other": "Participants",
       "progress_title": "Notre objectif de votes",
