--- a/apps/front/i18n/uk.json
+++ b/apps/front/i18n/uk.json
@@ -295,8 +295,10 @@
     "associated_proposals_one": "{{count}} пов’язана пропозиція",
     "associated_proposals_few": "{{count}} пов’язані пропозиції",
     "associated_proposals_many": "{{count}} пов’язаних пропозицій",
-    "position_plural": "{{ count }} висловлень думки",
-    "candidate_plural": " кандидатів щодо цієї ідеї.",
+    "position_one": "{{ count }} висловлення думки",
+    "position_other": "{{ count }} висловлень думки",
+    "candidate_one": " кандидата щодо цієї ідеї.",
+    "candidate_other": " кандидатів щодо цієї ідеї.",
     "open": "Показати рейтинг ідеї",
     "close": "Приховати рейтинг ідеї",
     "expand": " - Натисніть, щоб показати рейтинг ідеї",
@@ -782,7 +784,11 @@
       "start_date": "Дата початку",
       "end_date": "Дата закінчення публічної консультації",
       "remaining_one": "День залишився",
-      "remaining_plural": "Днів залишилося",
+      "remaining_few": "Днів залишилося",
+      "remaining_many": "Днів залишилося",
+      "proposals_one": "пропозиція",
+      "proposals_few": "пропозиції",
+      "proposals_many": "пропозицій",
       "participant_one": "учасник",
       "participant_few": "учасники",
       "participant_many": "учасників",
