fix(global): static pages routing based on language

--- a/apps/front/i18n/cs.json
+++ b/apps/front/i18n/cs.json
@@ -788,6 +788,9 @@
       "participant_one": "účastník/nice",
       "participant_few": "účastníci/e",
       "participant_other": "účastníků/ič",
+      "proposals_one": "návrh",
+      "proposals_few": "návrhy",
+      "proposals_other": "návrhů",
       "progress_title": "Náš volební cíl",
       "progress_total": "Celkový počet hlasů",
       "progress_target": " z {{votesTarget}} hlasů ({{percent}} %)",
