--- a/apps/front/i18n/uk.json
+++ b/apps/front/i18n/uk.json
@@ -334,6 +334,9 @@
       "pending": "В очікуванні модерації"
     }
   },
+  "report_translations": {
+    "button": "Варіанти пропозицій"
+  },
   "intro_card": {
     "purpose": "Ознайомча карта",
     "title": "Тисячі громадян пропонують рішення.",
