--- a/apps/front/i18n/uk.json
+++ b/apps/front/i18n/uk.json
@@ -273,7 +273,8 @@
     "million_one": "мільйон",
     "million_few": "мільйони",
     "million_many": "мільйонів",
-    "close_panel": "Закрити розкривне меню"
+    "close_panel": "Закрити розкривне меню",
+    "close": "Закрити"
   },
   "header": {
     "logo_alt": "Перейти на головну сторінку Make.org",
@@ -335,7 +336,11 @@
     }
   },
   "report_translations": {
-    "button": "Варіанти пропозицій"
+    "button": "Варіанти пропозицій",
+  "confirmation": {
+    "title": "Дякуємо за повідомлення!",
+    "description": "Наша команда розслідує його в найкоротші терміни.."
+  }
   },
   "intro_card": {
     "purpose": "Ознайомча карта",
@@ -995,7 +1000,6 @@
       "breadcrumb": "Результати «{{title}}»",
       "title": "Що винести із цієї публічної консультації?"
     },
-    "close": "Закрити",
     "reset": "Скинути",
     "sortby": "Сортувати за: ",
     "local_actors": {
