--- a/apps/widget/i18n/en.json
+++ b/apps/widget/i18n/en.json
@@ -249,7 +249,8 @@
     },
     "million_one": "million",
     "million_other": "millions",
-    "close_panel": "Close the panel"
+    "close_panel": "Close the panel",
+    "close": "Close"
   },
   "header": {
     "logo_alt": "Go to the Make.org website",
@@ -289,7 +290,11 @@
     "validate": "Validate"
   },
   "report_translations": {
-    "button": "Solution options"
+    "button": "Solution options",
+  "confirmation": {
+    "title": "Thank you for the report!",
+    "description": "Our team will investigate it as soon as possible."
+  }
   },
   "intro_card": {
     "title": "Thousands of citizens submit their solutions.",
@@ -750,7 +755,6 @@
         "title": "Consultation’s participants"
       }
     },
-    "close": "Close",
     "reset": "Reinitialize",
     "sortby": "Sort by: ",
     "local_actors": {
