--- a/apps/front/i18n/uk.json
+++ b/apps/front/i18n/uk.json
@@ -334,13 +334,21 @@
       "postponed": "В очікуванні модерації",
       "pending": "В очікуванні модерації"
     }
-  },
+  },  
   "report_translations": {
     "button": "Варіанти пропозицій",
-  "confirmation": {
-    "title": "Дякуємо за повідомлення!",
-    "description": "Наша команда розслідує його в найкоротші терміни.."
-  }
+    "confirmation": {
+      "title": "Дякуємо за повідомлення!",
+      "description": "Наша команда розслідує його в найкоротші терміни.."
+    },
+    "form": {
+      "title": "Звіт про машинний переклад",
+      "unclear": "Нечіткий переклад",
+      "error": "Помилка в перекладі",
+      "false_info": "Містить неправдиву інформацію",
+      "offensive": "Наступальне рішення",
+      "report": "Звіт"
+    }  
   },
   "intro_card": {
     "purpose": "Ознайомча карта",
