feat(global): MP-3091 add report options panel first step

--- a/apps/front/i18n/cs.json
+++ b/apps/front/i18n/cs.json
@@ -337,6 +337,11 @@
   },
   "report_translations": {
     "button": "Možnosti návrhu",
+    "see_original_button": "Viz originál ",
+    "first_step": {
+      "title": "Strojový překlad",
+      "text": "Překlady řešení jsou automatické. Pokud si všimnete chyby, dejte nám prosím vědět!"
+    },
     "confirmation": {
       "title": "Děkujeme za zprávu!",
       "description": "Náš tým ji co nejdříve prošetří."
