--- a/apps/front/i18n/uk.json
+++ b/apps/front/i18n/uk.json
@@ -334,7 +334,7 @@
       "postponed": "В очікуванні модерації",
       "pending": "В очікуванні модерації"
     }
-  },  
+  },
   "report_translations": {
     "button": "Варіанти пропозицій",
     "confirmation": {
@@ -348,7 +348,12 @@
       "false_info": "Містить неправдиву інформацію",
       "offensive": "Наступальне рішення",
       "report": "Звіт"
-    }  
+    },
+    "see_original_button": "Дивіться оригінал",
+    "first_step": {
+      "title": "Машинний переклад",
+      "text": "Переклади рішень здійснюються автоматично. Якщо ви помітили помилку, будь ласка, повідомте нам про це!"
+    }
   },
   "intro_card": {
     "purpose": "Ознайомча карта",
