--- a/apps/widget/i18n/en.json
+++ b/apps/widget/i18n/en.json
@@ -302,6 +302,11 @@
       "false_info": "Contains false information",
       "offensive": "Offensive solution",
       "report": "Report"
+    },
+    "see_original_button": "See original",
+    "first_step": {
+      "title": "Automatic translation",
+      "text": "The translations of the solutions are automatic. If you notice a mistake, please let us know!"
     }
   },
   "intro_card": {
