--- a/apps/widget/i18n/fr.json
+++ b/apps/widget/i18n/fr.json
@@ -324,6 +324,11 @@
       "false_info": "Contient une information fausse",
       "offensive": "Proposition offensante",
       "report": "Signaler"
+    },
+    "see_original_button": "Voir l’original",
+    "first_step": {
+      "title": "Traduction automatique",
+      "text": "Les propositions de nos consultations sont automatiques. Si vous remarquez une erreur, n’hésitez pas à la signaler à nos équipes !"
     }
   },
   "intro_card": {
