feat(global): 3196 wording DE homepage

--- a/apps/front/i18n/de.json
+++ b/apps/front/i18n/de.json
@@ -1104,9 +1104,9 @@
     },
     "partnership": {
       "title": "Mit Make.org zusammenarbeiten",
-      "subtitle": "Kooperationspartner werden",
-      "description": "Wir arbeiten mit Unternehmen, Vereinen und Verbänden sowie Institutionen zusammen, um unsere Projekte voranzutreiben. <br/>Wir begleiten diese Organisationen auch, damit sie ihre eigenen Konsultationen starten können.",
-      "button": "Unsere Angebote ansehen"
+      "subtitle": "Ihr Projekt starten",
+      "description": "Wir arbeiten mit dem öffentlichen Sektor, Unternehmen, Stiftungen und gemeinnützigen Organisationen zusammen, um unsere Projekte voranzutreiben. <br/>Wir begleiten diese Organisationen auch dabei, eigene Beteiligungsprojekte zu initiieren.",
+      "button": "Unsere Angebote entdecken"
     },
     "international": {
       "subtitle": "Landesweite Konsultationen",
