--- a/apps/widget/i18n/de.json
+++ b/apps/widget/i18n/de.json
@@ -1058,9 +1058,9 @@
     },
     "partnership": {
       "title": "Mit Make.org zusammenarbeiten",
-      "subtitle": "Kooperationspartner werden",
+      "subtitle": "Ihr Projekt starten",
       "description": "Wir arbeiten mit Unternehmen, Vereinen und Verbänden sowie Institutionen zusammen, um unsere Projekte voranzutreiben. <br/>Wir begleiten diese Organisationen auch, damit sie ihre eigenen Konsultationen starten können.",
-      "button": "Unsere Angebote ansehen"
+      "button": "Unsere Angebote entdecken"
     },
     "international": {
       "subtitle": "Landesweite Konsultationen",
