fix(front): fix title not showing in vote only banner
closes: MP-3226

--- a/apps/front/i18n/cs.json
+++ b/apps/front/i18n/cs.json
@@ -1008,7 +1008,7 @@
         "value_with_unit": "hodnota v {{unit}}",
         "percentage": "procenta"
       },
-      "breadcrumb": "Výsledky „{{title}}\"",
+      "breadcrumb": "Výsledky „{{title}}“",
       "title": "Co si z této konzultace vzít?"
     },
     "reset": "Obnovit",
