--- a/apps/front/i18n/en.json
+++ b/apps/front/i18n/en.json
@@ -91,8 +91,8 @@
       "title": "Create a new password - Make.org"
     },
     "a11y": {
-      "title": "Accessibilty statement - Make.org",
-      "description": "Discover Make.org's engagements for digital accessibilty."
+      "title": "Declaration of accessibility - Make.org",
+      "description": "Discover Make.org's engagements for digital accessibility."
     },
     "not_found": {
       "title": "Page not found - Error 404 - Make.org",
@@ -501,7 +501,7 @@
     "moderation_charter": "Moderation charter",
     "press_details": "Press",
     "cookies": "Use of cookies",
-    "a11y": "Accessibilty statement"
+    "a11y": "Declaration of accessibility"
   },
   "pannel": {},
   "cookie_modal": {
